--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,16 @@ android {
     }
     signingConfigs {
         Properties properties = new Properties()
-        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        boolean isHasFile = false
+        if (project.rootProject.findProject('local.properties') != null){
+            isHasFile = true
+            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        }
         releaseConfig {
-            storeFile file(properties.hasProperty("KEY_STOREFILE") ? properties.getProperty('KEY_STOREFILE') : "de_keystore")
-            storePassword properties.hasProperty("KEYSTORE_PASS") ? properties.getProperty('key.storePassword') : System.getenv("KEYSTORE_PASS")
-            keyAlias properties.hasProperty("KEY_ALIAS") ? properties.getProperty('key.keyAlias') : System.getenv("KEY_ALIAS")
-            keyPassword properties.hasProperty("KEY_PASS") ? properties.getProperty('key.keyPassword') : System.getenv("KEY_PASS")
+            storeFile file(isHasFile ? (properties.hasProperty("KEY_STOREFILE") ? properties.getProperty('KEY_STOREFILE') : "de_keystore") : "de_keystore")
+            storePassword isHasFile ? (properties.hasProperty("KEYSTORE_PASS") ? properties.getProperty('key.storePassword') : System.getenv("KEYSTORE_PASS")) : System.getenv("KEYSTORE_PASS")
+            keyAlias isHasFile ? (properties.hasProperty("KEY_ALIAS") ? properties.getProperty('key.keyAlias') : System.getenv("KEY_ALIAS")) : System.getenv("KEY_ALIAS")
+            keyPassword isHasFile ? (properties.hasProperty("KEY_PASS") ? properties.getProperty('key.keyPassword') : System.getenv("KEY_PASS")) : System.getenv("KEY_PASS")
         }
     }
     buildTypes {
