--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
             properties.load(project.rootProject.file('local.properties').newDataInputStream())
         }
         releaseConfig {
-            storeFile file(isHasFile ? (properties.hasProperty("KEY_STOREFILE") ? properties.getProperty('KEY_STOREFILE') : "de_keystore") : "de_keystore")
+            storeFile file(isHasFile ? (properties.hasProperty("KEY_STOREFILE") ? properties.getProperty('KEY_STOREFILE') : "de_keystore") : "../de_keystore")
             storePassword isHasFile ? (properties.hasProperty("KEYSTORE_PASS") ? properties.getProperty('key.storePassword') : System.getenv("KEYSTORE_PASS")) : System.getenv("KEYSTORE_PASS")
             keyAlias isHasFile ? (properties.hasProperty("KEY_ALIAS") ? properties.getProperty('key.keyAlias') : System.getenv("KEY_ALIAS")) : System.getenv("KEY_ALIAS")
             keyPassword isHasFile ? (properties.hasProperty("KEY_PASS") ? properties.getProperty('key.keyPassword') : System.getenv("KEY_PASS")) : System.getenv("KEY_PASS")
